<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spot App</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">See map</string>
    <string name="action_next_sighting">Next spots</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="preference_file_key">com.generic.spotapp.PREFERENCE_FILE_KEY</string>
    <string name="title_activity_map">Map</string>    
    <string name="map_whale">Spots</string>
    <string name="mode_map">Change mode</string>
    <string name="menu_change_normal">Mode normal</string>
    <string name="menu_change_hybrid">Mode hybrid</string>
    <string name="menu_change_satellite">Mode satellite</string>
    <string name="menu_change_terrain">Mode terrain</string>
    <string name="main_prox_avistamientos">Next ISS pass</string>
    <string name="txt_duracion">Duration: </string>
    <string name="app_id">522690977788329</string>  
      
    <string name="action_report">Report</string>
     
    <string name="dialog_gps_title">Confirmation</string>
    <string name="dialog_gps_message">Want to enable GPS?</string>
    <string name="dialog_gps_accept">Accept</string>
    <string name="dialog_gps_cancel">Cancel</string>
    
    <string name="dialog_rpt_title">Report</string>
    <string name="dialog_rpt_message">you can see the International Space Station?</string>
    <string name="dialog_rpt_yes">Yes</string>
    <string name="dialog_rpt_no">No</string>
    
    <string name="event_calendar_title">Next ISS pass</string>
    <string name="event_calendar_description">The ISS will pass over you</string>
    <string name="event_calendar_error">Sorry, no compatible calendar is found!</string>
    
    <string name="i_see">I can see the International Space Station :)</string>
    
    <string name="msg_error">You can not contact the server</string>      
    <string name="msg_error1">Failed to make the parse</string>  
       
    

</resources>
