<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/mode_map"
        android:title="@string/mode_map" android:orderInCategory="99">
        <menu>
            <item android:id="@+id/change_normal" android:title="@string/menu_change_normal" android:checkable="true"/>
            <item android:id="@+id/change_hybrid" android:title="@string/menu_change_hybrid" android:checkable="true"/>
            <item android:id="@+id/change_satellite" android:title="@string/menu_change_satellite" android:checkable="true"/>
            <item android:id="@+id/change_terrain" android:title="@string/menu_change_terrain" android:checkable="true"/>
        </menu>
        
    </item>
    <item android:id="@+id/setting" android:title="@string/action_settings" android:orderInCategory="100"></item>

</menu>